// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/LoadingAnimation Active 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <svg
      height="24px"
      preserveAspectRatio="xMidYMid"
      viewBox="0 0 100 10"
      width="240px"
      xlink="http://www.w3.org/1999/xlink"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        transform="translate(4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#216beb"
          r="4"
          transform="scale(0.275039 0.275039)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.4734848484848484s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(22.4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#ffbb00"
          r="4"
          transform="scale(0.0862935 0.0862935)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.37878787878787873s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(40.0 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#216beb"
          r="4"
          transform="scale(0.0000823166 0.0000823166)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.284090909090909s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(59.2 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#ffbb00"
          r="4"
          transform="scale(0.0779504 0.0779504)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.18939393939393936s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(77.6 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#216beb"
          r="4"
          transform="scale(0.262719 0.262719)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.09469696969696968s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(96 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#ffbb00"
          r="4"
          transform="scale(0.49324 0.49324)"
        >
          <animateTransform
            attributeName="transform"
            begin="0s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/LoadingAnimation Inactive 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <svg
      height="24px"
      preserveAspectRatio="xMidYMid"
      viewBox="0 0 100 10"
      width="240px"
      xlink="http://www.w3.org/1999/xlink"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        transform="translate(4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#c0c8d1"
          r="4"
          transform="scale(0.275039 0.275039)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.4734848484848484s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(22.4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#e4e7eb"
          r="4"
          transform="scale(0.0862935 0.0862935)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.37878787878787873s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(40.0 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#c0c8d1"
          r="4"
          transform="scale(0.0000823166 0.0000823166)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.284090909090909s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(59.2 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#e4e7eb"
          r="4"
          transform="scale(0.0779504 0.0779504)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.18939393939393936s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(77.6 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#c0c8d1"
          r="4"
          transform="scale(0.262719 0.262719)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.09469696969696968s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(96 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#e4e7eb"
          r="4"
          transform="scale(0.49324 0.49324)"
        >
          <animateTransform
            attributeName="transform"
            begin="0s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/LoadingAnimation Page example - active 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 Overlay-spdky8-0 eOwUiE"
    >
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 gsptzN"
      >
        <p
          class="Text-sc-1wu7vpu-0 kyRgWL"
          color="currentColor"
          font-size="medium"
          font-weight="medium"
        >
          1/4
        </p>
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <svg
            height="24px"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 10"
            width="240px"
            xlink="http://www.w3.org/1999/xlink"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#216beb"
                r="4"
                transform="scale(0.275039 0.275039)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.4734848484848484s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(22.4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffbb00"
                r="4"
                transform="scale(0.0862935 0.0862935)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.37878787878787873s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(40.0 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#216beb"
                r="4"
                transform="scale(0.0000823166 0.0000823166)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.284090909090909s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(59.2 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffbb00"
                r="4"
                transform="scale(0.0779504 0.0779504)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.18939393939393936s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(77.6 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#216beb"
                r="4"
                transform="scale(0.262719 0.262719)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.09469696969696968s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(96 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffbb00"
                r="4"
                transform="scale(0.49324 0.49324)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="0s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
          </svg>
        </div>
        <p
          class="Text-sc-1wu7vpu-0 keXslM"
          color="darkGrey"
          font-size="small"
        >
          Applying action ...
        </p>
      </div>
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 eRyacc"
      >
        <button
          aria-label="Retry"
          class="ControlIcon__StyledButton-sc-1h83lvi-0 jupSnY"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 efirdb"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="refresh"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </svg>
        </button>
        <button
          aria-label="Abort"
          class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 efirdb"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="close"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/LoadingAnimation Page example - inactive 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Flex-hrfu3s-0 Overlay-spdky8-0 eOwUiE"
    >
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 gsptzN"
      >
        <p
          class="Text-sc-1wu7vpu-0 gfZztd"
          color="grey"
          font-size="medium"
          font-weight="medium"
        >
          1/4
        </p>
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <svg
            height="24px"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 10"
            width="240px"
            xlink="http://www.w3.org/1999/xlink"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#c0c8d1"
                r="4"
                transform="scale(0.275039 0.275039)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.4734848484848484s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(22.4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#e4e7eb"
                r="4"
                transform="scale(0.0862935 0.0862935)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.37878787878787873s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(40.0 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#c0c8d1"
                r="4"
                transform="scale(0.0000823166 0.0000823166)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.284090909090909s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(59.2 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#e4e7eb"
                r="4"
                transform="scale(0.0779504 0.0779504)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.18939393939393936s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(77.6 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#c0c8d1"
                r="4"
                transform="scale(0.262719 0.262719)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.09469696969696968s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(96 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#e4e7eb"
                r="4"
                transform="scale(0.49324 0.49324)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="0s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
          </svg>
        </div>
        <p
          class="Text-sc-1wu7vpu-0 dJrfVi"
          color="grey"
          font-size="small"
        >
          Applying action ...
        </p>
      </div>
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 bOrzAg Alert-u8lbe-0 yTvFo"
        role="alert"
      >
        <div
          class="Box-xda4ls-0 hoMyit"
        >
          This action takes longer than expected. Try again...
        </div>
      </div>
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 eRyacc"
      >
        <button
          aria-label="Retry"
          class="ControlIcon__StyledButton-sc-1h83lvi-0 jlPgHC"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 efirdb"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="refresh"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </svg>
        </button>
        <button
          aria-label="Abort"
          class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 efirdb"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="close"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
